RelevanceLexer.cpp
/* Generated by re2c 0.13.5 on Thu Jan 20 15:22:30 2011 */

// To generate this file run: re2c -b -i -w RelevanceLexer.re2c > RelevanceLexer.cpp

#include "RelevanceLexer.h"

RelevanceLexer::RelevanceLexer()
{
	Reset();
}

void RelevanceLexer::Reset()
{
	m_start = 0;
	m_end = 0;
	m_cursor = 0;
	m_marker = 0;
	m_ctxmarker = 0;
}

RelevanceToken RelevanceLexer::NextToken()
{
	m_marker    = m_cursor;
	m_ctxmarker = m_cursor;


{
	UTF16::Unit yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  96,  96,  64,  64,  96,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 96,  64,   0,  64,  64,  64,  64,  80, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		208, 208, 208, 208, 208, 208, 208, 208, 
		208, 208,  64,  64,  64,  64,  64,  64, 
		 64,  80,  80,  80,  80,  80,  80,  80, 
		 80,  80,  80,  80,  80,  80,  80,  80, 
		 80,  80,  80,  80,  80,  80,  80,  80, 
		 80,  80,  80,  64,  64,  64,  64,  80, 
		 64,  80,  80,  80,  80,  80,  80,  80, 
		 80,  80,  80,  80,  80,  80,  80,  80, 
		 80,  80,  80,  80,  80,  80,  80,  80, 
		 80,  80,  80,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
		 64,  64,  64,  64,  64,  64,  64,  64, 
	};

	if ((m_end - m_cursor) < 17) { Fill(); }
	yych = *m_cursor;
	if (yych <= 'H') {
		if (yych <= ',') {
			if (yych <= '!') {
				if (yych <= '\f') {
					if (yych <= 0x0000) goto yy48;
					if (yych <= 0x0008) goto yy50;
					if (yych <= '\n') goto yy3;
					goto yy50;
				} else {
					if (yych <= '\r') goto yy3;
					if (yych <= 0x001F) goto yy50;
					if (yych <= ' ') goto yy3;
					goto yy27;
				}
			} else {
				if (yych <= '\'') {
					if (yych <= '"') goto yy7;
					if (yych == '&') goto yy28;
					goto yy50;
				} else {
					if (yych <= ')') {
						if (yych <= '(') goto yy23;
						goto yy25;
					} else {
						if (yych <= '*') goto yy30;
						if (yych <= '+') goto yy32;
						goto yy34;
					}
				}
			}
		} else {
			if (yych <= '=') {
				if (yych <= '9') {
					if (yych <= '-') goto yy36;
					if (yych <= '.') goto yy50;
					if (yych <= '/') goto yy38;
					goto yy5;
				} else {
					if (yych <= ':') goto yy50;
					if (yych <= ';') goto yy40;
					if (yych <= '<') goto yy42;
					goto yy44;
				}
			} else {
				if (yych <= 'B') {
					if (yych <= '>') goto yy46;
					if (yych <= '@') goto yy50;
					if (yych <= 'A') goto yy9;
					goto yy11;
				} else {
					if (yych <= 'D') {
						if (yych <= 'C') goto yy12;
						goto yy13;
					} else {
						if (yych <= 'E') goto yy14;
						if (yych <= 'F') goto yy15;
						goto yy11;
					}
				}
			}
		}
	} else {
		if (yych <= 'c') {
			if (yych <= 'T') {
				if (yych <= 'N') {
					if (yych <= 'I') goto yy16;
					if (yych <= 'L') goto yy11;
					if (yych <= 'M') goto yy17;
					goto yy18;
				} else {
					if (yych <= 'O') goto yy19;
					if (yych <= 'R') goto yy11;
					if (yych <= 'S') goto yy20;
					goto yy21;
				}
			} else {
				if (yych <= '^') {
					if (yych == 'W') goto yy22;
					if (yych <= 'Z') goto yy11;
					goto yy50;
				} else {
					if (yych <= '`') {
						if (yych <= '_') goto yy11;
						goto yy50;
					} else {
						if (yych <= 'a') goto yy9;
						if (yych <= 'b') goto yy11;
						goto yy12;
					}
				}
			}
		} else {
			if (yych <= 'n') {
				if (yych <= 'h') {
					if (yych <= 'd') goto yy13;
					if (yych <= 'e') goto yy14;
					if (yych <= 'f') goto yy15;
					goto yy11;
				} else {
					if (yych <= 'i') goto yy16;
					if (yych <= 'l') goto yy11;
					if (yych <= 'm') goto yy17;
					goto yy18;
				}
			} else {
				if (yych <= 't') {
					if (yych <= 'o') goto yy19;
					if (yych <= 'r') goto yy11;
					if (yych <= 's') goto yy20;
					goto yy21;
				} else {
					if (yych <= 'w') {
						if (yych <= 'v') goto yy11;
						goto yy22;
					} else {
						if (yych <= 'z') goto yy11;
						if (yych <= 0x00FF) goto yy50;
					}
				}
			}
		}
	}
yy2:
	m_cursor = m_marker;
	if (yyaccept <= 5) {
		if (yyaccept <= 2) {
			if (yyaccept <= 1) {
				if (yyaccept <= 0) {
					goto yy8;
				} else {
					goto yy10;
				}
			} else {
				goto yy87;
			}
		} else {
			if (yyaccept <= 4) {
				if (yyaccept <= 3) {
					goto yy102;
				} else {
					goto yy225;
				}
			} else {
				goto yy286;
			}
		}
	} else {
		if (yyaccept <= 8) {
			if (yyaccept <= 7) {
				if (yyaccept <= 6) {
					goto yy336;
				} else {
					goto yy377;
				}
			} else {
				goto yy437;
			}
		} else {
			if (yyaccept <= 10) {
				if (yyaccept <= 9) {
					goto yy487;
				} else {
					goto yy583;
				}
			} else {
				goto yy598;
			}
		}
	}
yy3:
	++m_cursor;
	yych = *m_cursor;
	goto yy712;
yy4:
	{ return RelevanceToken::t_whitespace; }
yy5:
	++m_cursor;
	yych = *m_cursor;
	goto yy710;
yy6:
	{ return RelevanceToken::t_number; }
yy7:
	yyaccept = 0;
	yych = *(m_marker = ++m_cursor);
	goto yy706;
yy8:
	{ return RelevanceToken::t_illegal; }
yy9:
	m_ctxmarker = m_cursor + 1;
	++m_cursor;
	if ((yych = *m_cursor) <= 'S') {
		if (yych <= '9') {
			if (yych == '\'') goto yy58;
			if (yych <= '/') goto yy696;
			goto yy58;
		} else {
			if (yych <= 'M') {
				if (yych <= '@') goto yy696;
				goto yy58;
			} else {
				if (yych <= 'N') goto yy695;
				if (yych <= 'R') goto yy58;
				goto yy694;
			}
		}
	} else {
		if (yych <= 'm') {
			if (yych <= '^') {
				if (yych <= 'Z') goto yy58;
				goto yy696;
			} else {
				if (yych == '`') goto yy696;
				goto yy58;
			}
		} else {
			if (yych <= 'r') {
				if (yych <= 'n') goto yy695;
				goto yy58;
			} else {
				if (yych <= 's') goto yy694;
				if (yych <= 'z') goto yy58;
				goto yy696;
			}
		}
	}
yy10:
	{ return RelevanceToken::t_word; }
yy11:
	yych = *++m_cursor;
	goto yy59;
yy12:
	yych = *++m_cursor;
	if (yych == 'O') goto yy685;
	if (yych == 'o') goto yy685;
	goto yy59;
yy13:
	yych = *++m_cursor;
	if (yych == 'O') goto yy612;
	if (yych == 'o') goto yy612;
	goto yy59;
yy14:
	yych = *++m_cursor;
	if (yych <= 'X') {
		if (yych <= 'N') {
			if (yych == 'L') goto yy551;
			if (yych <= 'M') goto yy59;
			goto yy550;
		} else {
			if (yych == 'Q') goto yy549;
			if (yych <= 'W') goto yy59;
			goto yy548;
		}
	} else {
		if (yych <= 'n') {
			if (yych == 'l') goto yy551;
			if (yych <= 'm') goto yy59;
			goto yy550;
		} else {
			if (yych <= 'q') {
				if (yych <= 'p') goto yy59;
				goto yy549;
			} else {
				if (yych == 'x') goto yy548;
				goto yy59;
			}
		}
	}
yy15:
	yych = *++m_cursor;
	if (yych == 'A') goto yy542;
	if (yych == 'a') goto yy542;
	goto yy59;
yy16:
	yych = *++m_cursor;
	if (yych <= 'T') {
		if (yych <= 'F') {
			if (yych <= 'E') goto yy59;
			goto yy221;
		} else {
			if (yych <= 'R') goto yy59;
			if (yych <= 'S') goto yy220;
			goto yy219;
		}
	} else {
		if (yych <= 'r') {
			if (yych == 'f') goto yy221;
			goto yy59;
		} else {
			if (yych <= 's') goto yy220;
			if (yych <= 't') goto yy219;
			goto yy59;
		}
	}
yy17:
	yych = *++m_cursor;
	if (yych == 'O') goto yy215;
	if (yych == 'o') goto yy215;
	goto yy59;
yy18:
	yych = *++m_cursor;
	if (yych <= 'U') {
		if (yych == 'O') goto yy205;
		if (yych <= 'T') goto yy59;
		goto yy204;
	} else {
		if (yych <= 'o') {
			if (yych <= 'n') goto yy59;
			goto yy205;
		} else {
			if (yych == 'u') goto yy204;
			goto yy59;
		}
	}
yy19:
	yych = *++m_cursor;
	if (yych <= 'R') {
		if (yych == 'F') goto yy199;
		if (yych <= 'Q') goto yy59;
		goto yy198;
	} else {
		if (yych <= 'f') {
			if (yych <= 'e') goto yy59;
			goto yy199;
		} else {
			if (yych == 'r') goto yy198;
			goto yy59;
		}
	}
yy20:
	yych = *++m_cursor;
	if (yych == 'T') goto yy179;
	if (yych == 't') goto yy179;
	goto yy59;
yy21:
	yych = *++m_cursor;
	if (yych <= 'R') {
		if (yych == 'H') goto yy66;
		if (yych <= 'Q') goto yy59;
		goto yy65;
	} else {
		if (yych <= 'h') {
			if (yych <= 'g') goto yy59;
			goto yy66;
		} else {
			if (yych == 'r') goto yy65;
			goto yy59;
		}
	}
yy22:
	yych = *++m_cursor;
	if (yych == 'H') goto yy57;
	if (yych == 'h') goto yy57;
	goto yy59;
yy23:
	++m_cursor;
	{ return RelevanceToken::t_openParen; }
yy25:
	++m_cursor;
	{ return RelevanceToken::t_closeParen; }
yy27:
	yych = *++m_cursor;
	if (yych == '=') goto yy55;
	goto yy8;
yy28:
	++m_cursor;
	{ return RelevanceToken::t_concat; }
yy30:
	++m_cursor;
	{ return RelevanceToken::t_star; }
yy32:
	++m_cursor;
	{ return RelevanceToken::t_plus; }
yy34:
	++m_cursor;
	{ return RelevanceToken::t_comma; }
yy36:
	++m_cursor;
	{ return RelevanceToken::t_minus; }
yy38:
	++m_cursor;
	{ return RelevanceToken::t_slash; }
yy40:
	++m_cursor;
	{ return RelevanceToken::t_semiColon; }
yy42:
	++m_cursor;
	if ((yych = *m_cursor) == '=') goto yy53;
	{ return RelevanceToken::t_less; }
yy44:
	++m_cursor;
	{ return RelevanceToken::t_equal; }
yy46:
	++m_cursor;
	if ((yych = *m_cursor) == '=') goto yy51;
	{ return RelevanceToken::t_greater; }
yy48:
	++m_cursor;
	{ return RelevanceToken::t_endOfInput; }
yy50:
	yych = *++m_cursor;
	goto yy8;
yy51:
	++m_cursor;
	{ return RelevanceToken::t_greaterOrEqual; }
yy53:
	++m_cursor;
	{ return RelevanceToken::t_lessOrEqual; }
yy55:
	++m_cursor;
	{ return RelevanceToken::t_notEqual; }
yy57:
	yych = *++m_cursor;
	if (yych == 'O') goto yy60;
	if (yych == 'o') goto yy60;
	goto yy59;
yy58:
	++m_cursor;
	if (m_end <= m_cursor) { Fill(); }
	yych = *m_cursor;
yy59:
	if (yych & ~0xFF) {
		goto yy10;
	} else if (yybm[0+yych] & 16) {
		goto yy58;
	}
	goto yy10;
yy60:
	yych = *++m_cursor;
	if (yych == 'S') goto yy61;
	if (yych != 's') goto yy59;
yy61:
	yych = *++m_cursor;
	if (yych == 'E') goto yy62;
	if (yych != 'e') goto yy59;
yy62:
	m_ctxmarker = m_cursor + 1;
	yych = *++m_cursor;
	if (yych & ~0xFF) {
	} else if (yybm[0+yych] & 16) {
		goto yy58;
	}
	++m_cursor;
	m_cursor = m_ctxmarker;
	{ return RelevanceToken::t_whose; }
yy65:
	yych = *++m_cursor;
	if (yych == 'U') goto yy175;
	if (yych == 'u') goto yy175;
	goto yy59;
yy66:
	yych = *++m_cursor;
	if (yych == 'E') goto yy67;
	if (yych != 'e') goto yy59;
yy67:
	m_ctxmarker = m_cursor + 1;
	yych = *++m_cursor;
	if (yych <= 'R') {
		if (yych <= '9') {
			if (yych == '\'') goto yy58;
			if (yych <= '/') goto yy70;
			goto yy58;
		} else {
			if (yych <= 'M') {
				if (yych <= '@') goto yy70;
				goto yy58;
			} else {
				if (yych <= 'N') goto yy69;
				if (yych <= 'Q') goto yy58;
			}
		}
	} else {
		if (yych <= 'm') {
			if (yych <= '^') {
				if (yych <= 'Z') goto yy58;
				goto yy70;
			} else {
				if (yych == '`') goto yy70;
				goto yy58;
			}
		} else {
			if (yych <= 'q') {
				if (yych <= 'n') goto yy69;
				goto yy58;
			} else {
				if (yych <= 'r') goto yy68;
				if (yych <= 'z') goto yy58;
				goto yy70;
			}
		}
	}
yy68:
	yych = *++m_cursor;
	if (yych == 'E') goto yy74;
	if (yych == 'e') goto yy74;
	goto yy59;
yy69:
	m_ctxmarker = m_cursor + 1;
	yych = *++m_cursor;
	if (yych & ~0xFF) {
		goto yy72;
	} else if (yybm[0+yych] & 16) {
		goto yy58;
	}
	goto yy72;
yy70:
	++m_cursor;
	m_cursor = m_ctxmarker;
	{ return RelevanceToken::t_ignored; }
yy72:
	++m_cursor;
	m_cursor = m_ctxmarker;
	{ return RelevanceToken::t_then; }
yy74:
	yyaccept = 1;
	yych = *(m_marker = ++m_cursor);
	if (yych & ~0xFF) {
		goto yy10;
	} else if (yybm[0+yych] & 32) {
		goto yy75;
	}
	if (yych <= '@') {
		if (yych <= '\'') {
			if (yych <= '&') goto yy10;
			goto yy58;
		} else {
			if (yych <= '/') goto yy10;
			if (yych <= '9') goto yy58;
			goto yy10;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy58;
			if (yych <= '^') goto yy10;
			goto yy58;
		} else {
			if (yych <= '`') goto yy10;
			if (yych <= 'z') goto yy58;
			goto yy10;
		}
	}
yy75:
	++m_cursor;
	if ((m_end - m_cursor) < 10) { Fill(); }
	yych = *m_cursor;
	if (yych & ~0xFF) {
		goto yy2;
	} else if (yybm[0+yych] & 32) {
		goto yy75;
	}
	if (yych <= 'T') {
		if (yych <= 'C') {
			if (yych != 'A') goto yy2;
		} else {
			if (yych <= 'D') goto yy79;
			if (yych <= 'E') goto yy80;
			if (yych <= 'S') goto yy2;
			goto yy78;
		}
	} else {
		if (yych <= 'd') {
			if (yych == 'a') goto yy77;
			if (yych <= 'c') goto yy2;
			goto yy79;
		} else {
			if (yych <= 'e') goto yy80;
			if (yych == 't') goto yy78;
			goto yy2;
		}
	}
yy77:
	++m_cursor;
	if (m_end <= m_cursor) { Fill(); }
	yych = *m_cursor;
	if (yych <= 0x001F) {
		if (yych <= '\n') {
			if (yych <= 0x0008) goto yy2;
			goto yy173;
		} else {
			if (yych == '\r') goto yy173;
			goto yy2;
		}
	} else {
		if (yych <= 'N') {
			if (yych <= ' ') goto yy173;
			if (yych <= 'M') goto yy2;
			goto yy172;
		} else {
			if (yych == 'n') goto yy172;
			goto yy2;
		}
	}
yy78:
	++m_cursor;
	if (m_end <= m_cursor) { Fill(); }
	yych = *m_cursor;
	if (yych == 'H') goto yy171;
	if (yych == 'h') goto yy171;
	goto yy2;
yy79:
	yych = *++m_cursor;
	if (yych == 'O') goto yy116;
	if (yych == 'o') goto yy116;
	goto yy2;
yy80:
	yych = *++m_cursor;
	if (yych == 'X') goto yy81;
	if (yych != 'x') goto yy2;
yy81:
	yych = *++m_cursor;
	if (yych == 'I') goto yy82;
	if (yych != 'i') goto yy2;
yy82:
	yych = *++m_cursor;
	if (yych == 'S') goto yy83;
	if (yych != 's') goto yy2;
yy83:
	yych = *++m_cursor;
	if (yych == 'T') goto yy84;
	if (yych != 't') goto yy2;
yy84:
	m_ctxmarker = m_cursor + 1;
	yych = *++m_cursor;
	if (yych <= '9') {
		if (yych <= 0x001F) {
			if (yych <= '\n') {
				if (yych <= 0x0008) goto yy88;
				goto yy86;
			} else {
				if (yych == '\r') goto yy86;
				goto yy88;
			}
		} else {
			if (yych <= '&') {
				if (yych <= ' ') goto yy86;
				goto yy88;
			} else {
				if (yych <= '\'') goto yy2;
				if (yych <= '/') goto yy88;
				goto yy2;
			}
		}
	} else {
		if (yych <= '^') {
			if (yych <= 'R') {
				if (yych <= '@') goto yy88;
				goto yy2;
			} else {
				if (yych <= 'S') goto yy85;
				if (yych <= 'Z') goto yy2;
				goto yy88;
			}
		} else {
			if (yych <= 'r') {
				if (yych == '`') goto yy88;
				goto yy2;
			} else {
				if (yych <= 's') goto yy85;
				if (yych <= 'z') goto yy2;
				goto yy88;
			}
		}
	}
yy85:
	m_ctxmarker = m_cursor + 1;
	yych = *++m_cursor;
	if (yych <= '\'') {
		if (yych <= '\r') {
			if (yych <= 0x0008) goto yy101;
			if (yych <= '\n') goto yy103;
			if (yych <= '\f') goto yy101;
			goto yy103;
		} else {
			if (yych == ' ') goto yy103;
			if (yych <= '&') goto yy101;
			goto yy2;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '/') goto yy101;
			if (yych <= '9') goto yy2;
			if (yych <= '@') goto yy101;
			goto yy2;
		} else {
			if (yych <= '_') {
				if (yych <= '^') goto yy101;
				goto yy2;
			} else {
				if (yych <= '`') goto yy101;
				if (yych <= 'z') goto yy2;
				goto yy101;
			}
		}
	}
yy86:
	yyaccept = 2;
	yych = *(m_marker = ++m_cursor);
	if (yych <= 'M') {
		if (yych <= '\r') {
			if (yych <= 0x0008) goto yy87;
			if (yych <= '\n') goto yy92;
			if (yych >= '\r') goto yy92;
		} else {
			if (yych <= ' ') {
				if (yych >= ' ') goto yy92;
			} else {
				if (yych == 'A') goto yy89;
			}
		}
	} else {
		if (yych <= 'a') {
			if (yych <= 'S') {
				if (yych <= 'N') goto yy91;
			} else {
				if (yych <= 'T') goto yy90;
				if (yych >= 'a') goto yy89;
			}
		} else {
			if (yych <= 'n') {
				if (yych >= 'n') goto yy91;
			} else {
				if (yych == 't') goto yy90;
			}
		}
	}
yy87:
	m_cursor = m_ctxmarker;
	{ return RelevanceToken::t_exists; }
yy88:
	yych = *++m_cursor;
	goto yy87;
yy89:
	++m_cursor;
	if (m_end <= m_cursor) { Fill(); }
	yych = *m_cursor;
	if (yych <= 0x001F) {
		if (yych <= '\n') {
			if (yych <= 0x0008) goto yy2;
			goto yy99;
		} else {
			if (yych == '\r') goto yy99;
			goto yy2;
		}
	} else {
		if (yych <= 'N') {
			if (yych <= ' ') goto yy99;
			if (yych <= 'M') goto yy2;
			goto yy98;
		} else {
			if (yych == 'n') goto yy98;
			goto yy2;
		}
	}
yy90:
	++m_cursor;
	if (m_end <= m_cursor) { Fill(); }
	yych = *m_cursor;
	if (yych == 'H') goto yy97;
	if (yych == 'h') goto yy97;
	goto yy2;
yy91:
	yych = *++m_cursor;
	if (yych == 'O') goto yy94;
	if (yych == 'o') goto yy94;
	goto yy2;
yy92:
	++m_cursor;
	if ((m_end - m_cursor) < 3) { Fill(); }
	yych = *m_cursor;
	if (yych <= 'M') {
		if (yych <= '\r') {
			if (yych <= 0x0008) goto yy2;
			if (yych <= '\n') goto yy92;
			if (yych <= '\f') goto yy2;
			goto yy92;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x001F) goto yy2;
				goto yy92;
			} else {
				if (yych == 'A') goto yy89;
				goto yy2;
			}
		}
	} else {
		if (yych <= 'a') {
			if (yych <= 'S') {
				if (yych <= 'N') goto yy91;
				goto yy2;
			} else {
				if (yych <= 'T') goto yy90;
				if (yych <= '`') goto yy2;
				goto yy89;
			}
		} else {
			if (yych <= 'n') {
				if (yych <= 'm') goto yy2;
				goto yy91;
			} else {
				if (yych == 't') goto yy90;
				goto yy2;
			}
		}
	}
yy94:
	m_ctxmarker = m_cursor + 1;
	yych = *++m_cursor;
	if (yych <= '@') {
		if (yych <= '\'') {
			if (yych >= '\'') goto yy2;
		} else {
			if (yych <= '/') goto yy95;
			if (yych <= '9') goto yy2;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy2;
			if (yych >= '_') goto yy2;
		} else {
			if (yych <= '`') goto yy95;
			if (yych <= 'z') goto yy2;
		}
	}
yy95:
	++m_cursor;
	m_cursor = m_ctxmarker;
	{ return RelevanceToken::t_notExists; }
yy97:
	++m_cursor;
	if (m_end <= m_cursor) { Fill(); }
	yych = *m_cursor;
	if (yych == 'E') goto yy98;
	if (yych != 'e') goto yy2;
yy98:
	++m_cursor;
	if (m_end <= m_cursor) { Fill(); }
	yych = *m_cursor;
	if (yych <= '\f') {
		if (yych <= 0x0008) goto yy2;
		if (yych >= '\v') goto yy2;
	} else {
		if (yych <= '\r') goto yy99;
		if (yych != ' ') goto yy2;
	}
yy99:
	++m_cursor;
	if ((m_end - m_cursor) < 3) { Fill(); }
	yych = *m_cursor;
	if (yych <= 'M') {
		if (yych <= '\r') {
			if (yych <= 0x0008) goto yy2;
			if (yych <= '\n') goto yy99;
			if (yych <= '\f') goto yy2;
			goto yy99;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x001F) goto yy2;
				goto yy99;
			} else {
				if (yych == 'A') goto yy89;
				goto yy2;
			}
		}
	} else {
		if (yych <= 'a') {
			if (yych <= 'S') {
				if (yych <= 'N') goto yy91;
				goto yy2;
			} else {
				if (yych <= 'T') goto yy90;
				if (yych <= '`') goto yy2;
				goto yy89;
			}
		} else {
			if (yych <= 'n') {
				if (yych <= 'm') goto yy2;
				goto yy91;
			} else {
				if (yych == 't') goto yy90;
				goto yy2;
			}
		}
	}
yy101:
	++m_cursor;
yy102:
	m_cursor = m_ctxmarker;
	{ return RelevanceToken::t_exists; }
yy103:
	yyaccept = 3;
	yych = *(m_marker = ++m_cursor);
	if (yych <= 'M') {
		if (yych <= '\r') {
			if (yych <= 0x0008) goto yy102;
			if (yych <= '\n') goto yy107;
			if (yych <= '\f') goto yy102;
			goto yy107;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x001F) goto yy102;
				goto yy107;
			} else {
				if (yych != 'A') goto yy102;
			}
		}
	} else {
		if (yych <= 'a') {
			if (yych <= 'S') {
				if (yych <= 'N') goto yy106;
				goto yy102;
			} else {
				if (yych <= 'T') goto yy105;
				if (yych <= '`') goto yy102;
			}
		} else {
			if (yych <= 'n') {
				if (yych <= 'm') goto yy102;
				goto yy106;
			} else {
				if (yych == 't') goto yy105;
				goto yy102;
			}
		}
	}
yy104:
	++m_cursor;
	if (m_end <= m_cursor) { Fill(); }
	yych = *m_cursor;
	if (yych <= 0x001F) {
		if (yych <= '\n') {
			if (yych <= 0x0008) goto yy2;
			goto yy114;
		} else {
			if (yych == '\r') goto yy114;
			goto yy2;
		}
	} else {
		if (yych <= 'N') {
			if (yych <= ' ') goto yy114;
			if (yych <= 'M') goto yy2;
			goto yy113;
		} else {
			if (yych == 'n') goto yy113;
			goto yy2;
		}
	}
yy105:
	++m_cursor;
	if (m_end <= m_cursor) { Fill(); }
	yych = *m_cursor;
	if (yych == 'H') goto yy112;
	if (yych == 'h') goto yy112;
	goto yy2;
yy106:
	yych = *++m_cursor;
	if (yych == 'O') goto yy109;
	if (yych == 'o') goto yy109;
	goto yy2;
yy107:
	++m_cursor;
	if ((m_end - m_cursor) < 3) { Fill(); }
	yych = *m_cursor;
	if (yych <= 'M') {
		if (yych <= '\r') {
			if (yych <= 0x0008) goto yy2;
			if (yych <= '\n') goto yy107;
			if (yych <= '\f') goto yy2;
			goto yy107;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x001F) goto yy2;
				goto yy107;
			} else {
				if (yych == 'A') goto yy104;
				goto yy2;
			}
		}
	} else {
		if (yych <= 'a') {
			if (yych <= 'S') {
				if (yych <= 'N') goto yy106;
				goto yy2;
			} else {
				if (yych <= 'T') goto yy105;
				if (yych <= '`') goto yy2;
				goto yy104;
			}
		} else {
			if (yych <= 'n') {
				if (yych <= 'm') goto yy2;
				goto yy106;
			} else {
				if (yych == 't') goto yy105;
				goto yy2;
			}
		}
	}
yy109:
	m_ctxmarker = m_cursor + 1;
	yych = *++m_cursor;
